# openstack-example

./: .coveragerc  .gitignore  .testr.conf  .travis.yml  AUTHORS  ChangeLog  README.md  requirements.txt  sd.py  setup.cfg  test-requirements.txt  tox.ini
exampleclient/: __init__.py  example.py  shell.py
exampleclient/tests/: base.py
exampleclient/tests/some_category/: test_example.py
os_example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
