[metadata]
name = os-example
summary = OpenStack Example Client
description-file =
    README.md
author = Michael Gugino
author-email = gugino.michael@yahoo.com
home-page = https://github.com/michaelgugino/openstack-example
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    exampleclient

[entry_points]
console_scripts =
    xc = exampleclient.shell:main

exampleclient.example.hello =
    sayhello = exampleclient.example:hello
    saygoodbye = exampleclient.example:goodbye
